gcc/testsuite/rust/rustc/ui/issues/issue-65284-suggest-generic-trait-bound.rs
trait Foo {
    fn foo(&self);
}

trait Bar {}

fn do_stuff<T : Bar>(t : T) {
    t.foo() // { dg-error ".E0599." "" { target *-*-* } }
}

fn main() {}

